5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1831_3177.log
== TEST (2019-06-13 16:29:54) 
-- CODE:
from numpy import*

x = array(eval(input("string:")))

cont = 0

for i in range(len(x)):
	if(i < size (x)):
		cont[i] = cont[i] + 1
print(cont)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:09) 
-- CODE:
from numpy import*

x = array(eval(input("string:")))

cont = 0

for i in range(len(x)):
	if(i < size (x)):
		cont[i] = cont[i] + 1
print(cont)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:56) 
-- CODE:
from numpy import*

x = ""

cont = 0

for i in range(len(x)):
	if(i < size (x)):
		cont[i] = cont[i] + 1
print(cont)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:08) 
-- CODE:
from numpy import*

x = ""

cont = 0

for i in range(len("")):
	if(i < size ("")):
		cont[i] = cont[i] + 1
print(cont)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:10) 
-- CODE:
from numpy import*

x = ""

cont = 0

for i in range(len("")):
	if(i < size ("")):
		cont[i] = cont[i] + 1
print(cont)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:29) 
-- CODE:
from numpy import*

x = array(eval(input("string:")))

cont = 0

for i in range(len(x)):
	if(i < size (x)):
		cont[i] = cont[i] + 1
print(cont)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:36) 
-- CODE:
from numpy import*

x = array(eval(input("string:")))

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for i in range(len(x)):
	if(x[i]  = "a" 
		cont[i] = cont[i] + 1
print(conta)		
-- ERROR:
File "XXXX", line 12
    if(x[i]  = "a" 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:49) 
-- CODE:
from numpy import*

x = array(eval(input("string:")))

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for i in range(len(x)):
	if(x[i]  = "a"):
		cont[i] = cont[i] + 1
print(conta)		
-- ERROR:
File "XXXX", line 12
    if(x[i]  = "a"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:59) 
-- CODE:
from numpy import*

x = array(eval(input("string:")))

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for i in range(len(x)):
	if(x[i]  == "a"):
		cont[i] = cont[i] + 1
print(conta)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:12) 
-- CODE:
from numpy import*

x = array(eval(input("string:")))

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for i in range(len(x)):
	if(x[i]  == "a"):
		conta = conta + 1
print(conta)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:29) 
-- CODE:
from numpy import*

x = array(eval(input("string:")))

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for i in range(len(x)):
	if(x[i]  == "a"):
		conta = conta + 1
print(conta)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:55) 
-- CODE:
from numpy import*

x = array(eval(input("string:")))

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for i in range(len(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
print(conta)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:06) 
-- CODE:
from numpy import*

x = array(eval(input("string:")))

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(len(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
print(conta)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:46) 
-- CODE:
from numpy import*

x = array(eval(input("string:")))

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(size(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
print(conta)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:28) 
-- CODE:
from numpy import*

x = (input("string:"))

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(size(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
print(conta)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:56) 
-- CODE:
from numpy import*

x = input("string:")

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(size(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
print(conta)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:49) 
-- CODE:
from numpy import*

x = input("string:")

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(size(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
print(conta)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:25) 
-- CODE:
from numpy import*

x = input("string:")

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(size(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
print(conta)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:42) 
-- CODE:
from numpy import*

x = input("string:")

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(len(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
print(conta)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:34) 
-- CODE:
from numpy import*

x = input("string:")

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(len(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
	elif(x[ch] == "e"):
		conte = conte + 1
	elif(x[ch] == "i"):
		conti = conti + 1
	elif(x[ch] == "o"):
		conto = conto + 1
	elif(x[ch] == "u"):
		contu = contu + 1
		
print(conta)
print(conte)
print(conti)
print(conto)
print(contu)

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:42:49) 
-- CODE:
from numpy import*

x = input("string:")

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(len(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
	elif(x[ch] == "e"):
		conte = conte + 1
	elif(x[ch] == "i"):
		conti = conti + 1
	elif(x[ch] == "o"):
		conto = conto + 1
	elif(x[ch] == "u"):
		contu = contu + 1
		
print(conta)
print(conte)
print(conti)
print(conto)
print(contu)

	



-- EXECUTION TIME:
0.949662
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
1
1
1
1
1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
2
1
1
0
0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
1
0
0
3
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:08) 
-- CODE:
from numpy import*

x = input("string:")

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(len(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
	elif(x[ch] == "e"):
		conte = conte + 1
	elif(x[ch] == "i"):
		conti = conti + 1
	elif(x[ch] == "o"):
		conto = conto + 1
	elif(x[ch] == "u"):
		contu = contu + 1
		
print(conta)
print(conte)
print(conti)
print(conto)
print(contu)

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:40) 
-- CODE:
from numpy import*

x = input("string:")

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(len(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
	elif(x[ch] == "e"):
		conte = conte + 1
	elif(x[ch] == "i"):
		conti = conti + 1
	elif(x[ch] == "o"):
		conto = conto + 1
	elif(x[ch] == "u"):
		contu = contu + 1
		
print("a",conta)
print("e",conte)
print(conti)
print(conto)
print(contu)

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:25) 
-- CODE:
from numpy import*

x = input("string:")

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(len(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
	elif(x[ch] == "e"):
		conte = conte + 1
	elif(x[ch] == "i"):
		conti = conti + 1
	elif(x[ch] == "o"):
		conto = conto + 1
	elif(x[ch] == "u"):
		contu = contu + 1
		
print("a:",conta)
print("e:",conte)
print("i:",conti)
print("o:",conto)
print("u:",contu)

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:44:39) 
-- CODE:
from numpy import*

x = input("string:")

conta = 0 
conte = 0
conti = 0
conto = 0
contu = 0

for ch in range(len(x)):
	if(x[ch]  == "a"):
		conta = conta + 1
	elif(x[ch] == "e"):
		conte = conte + 1
	elif(x[ch] == "i"):
		conti = conti + 1
	elif(x[ch] == "o"):
		conto = conto + 1
	elif(x[ch] == "u"):
		contu = contu + 1
		
print("a:",conta)
print("e:",conte)
print("i:",conti)
print("o:",conto)
print("u:",contu)

	



-- EXECUTION TIME:
0.918978
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a: 1
e: 1
i: 1
o: 1
u: 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a: 2
e: 1
i: 1
o: 0
u: 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a: 1
e: 0
i: 0
o: 3
u: 0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
